# unfunny_bot

./: .gitignore  Cargo.toml  README.md
resources/: image.txt  joke_type.txt  noun.txt  prompts.txt  song_type.txt  write.txt
src/: main.rs
