[package]
name = "unfunny_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.26", features = ["full"] }
async-openai = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["rustls-tls", "serde_json", "json", "stream"] }
str-distance = "0.1.0"
rand = "0.8"
regex = "1.8"
censor = "0.3.0"
image2 = "1.9.2"
tokio-util = { version = "0.7", features = ["codec"] }
codec = "0.0.0"
futures = "0.3"
